Fix broken pyopenssl / urllib3 dependency
Development builds were breaking for ckanext-spatial and ckanext-harvest
due to the transitive dependency of urllib3 on pyopenssl generating
the following error

...
  File "/app/ckanext-spatial/ckanext/spatial/harvesters/__init__.py", line 9, in <module>
    from ckanext.spatial.harvesters.base import SpatialHarvester
  File "/app/ckanext-spatial/ckanext/spatial/harvesters/base.py", line 28, in <module>
    from ckanext.harvest.harvesters.base import munge_tag
  File "/env/lib/python3.9/site-packages/ckanext/harvest/harvesters/__init__.py", line 1, in <module>
    from ckanext.harvest.harvesters.ckanharvester import CKANHarvester
  File "/env/lib/python3.9/site-packages/ckanext/harvest/harvesters/ckanharvester.py", line 7, in <module>
    from urllib3.contrib import pyopenssl
  File "/env/lib/python3.9/site-packages/urllib3/contrib/pyopenssl.py", line 53, in <module>
    from cryptography.hazmat.backends.openssl.x509 import _Certificate
ModuleNotFoundError: No module named 'cryptography.hazmat.backends.openssl.x509'

Manually forcing a later version of urllib3 to be installed (>= 1.26.13)

--- a/requirements.in
+++ b/requirements.in
@@ -36,3 +36,4 @@ watchdog==2.1.5         # For py3 support
 webassets==0.12.1
 Werkzeug[watchdog]==1.0.0
 zope.interface==5.4.0
+urllib3>=1.26.13        # BPA - force minimum version of dependency for ckanext-harvest/ckanext-spatial
